--- a/Styles.css
+++ b/Styles.css
@@ -14,6 +14,11 @@
 
 }
 
+.bg-body-tertiary{
+    background-color: rgba(7, 104, 196, 0.288) !important;
+    color: aliceblue;
+}
+
 
 .btn-primary{
     background-color: var(--primary-btn-color);
@@ -22,8 +27,9 @@
 
 .btn-primary:hover{
     background-color: var(--primary-btn-hover-color);
-    border-color: var(--primary-btn-border-hover-color);
+    border-color: black solid;
     box-shadow: var(--primary-shadow-inset-btn-hover-color), var(--primary-glow-btn-hover-color);
+    ;
 }
 
 .btn-secondary{
