--- a/Styles.css
+++ b/Styles.css
@@ -39,3 +39,20 @@
     border-color: var(--secondary-btn-color);
 }
 
+div.col{
+    margin-top: 40px;
+}
+footer.container{
+    margin-top: 20px;
+}
+
+.text-hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease; /* Para que aparezca suavemente */
+}
+
+.text-show {
+  opacity: 1;
+  visibility: visible;
+}
