--- a/Styles.css
+++ b/Styles.css
@@ -23,7 +23,18 @@ body, body.tienda{
     flex-direction: column;
     min-height: 100vh;
 }
+.btnBuy{
+    box-shadow: 0px 0px 20px var(--primary-btn-color);
+    transform:translateY(-20px);
+    height: 75px;
+    width: 140px;
+    font-size: 20px;
+    font-weight: bolder;
+}
 
+.btnBuy:hover{
+    box-shadow: 0px 0px 20px var(--primary-btn-hover-color);
+}
 
 footer {
     margin-top: auto;
@@ -42,8 +53,8 @@ footer {
 
 .btn-primary:hover{
     background-color: var(--primary-btn-hover-color);
-    border-color: black solid;
-    box-shadow: var(--primary-shadow-inset-btn-hover-color);
+
+
 }
 
 .btn-secondary{
