--- a/Styles.css
+++ b/Styles.css
@@ -36,6 +36,10 @@ body, body.tienda{
     box-shadow: 0px 0px 20px var(--primary-btn-hover-color);
 }
 
+main {
+    flex: 1;
+}
+
 footer {
     margin-top: auto;
 }
